원형 이미지뷰로 프사 배치 + 흰색 테두리  - circleImageView 라이브러리 활용

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,16 +10,33 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center"
+        android:background="@color/skyBlue"
         android:padding="15dp">
 
-        <ImageView
+        <!--<ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/test_01"
+            android:src="@drawable/main"
             android:scaleType="centerCrop"
-            />
+            />-->
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/main"
+            app:civ_border_color="@color/white"
+            app:civ_border_width="2dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="rhino"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_marginTop="10dp" />
 
 
     </LinearLayout>
