프로필 사진을 누르면 크게 보기 화면으로 들어오기

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             />-->
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profilePhotoImg"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
